Project 0/CustomPackage/main/default/objects/Game_Orders__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Game</label>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>Game Orders</relationshipLabel>
    <relationshipName>GameOrders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>