Project 0/CustomPackage/main/default/objects/Game_Orders__c/fields/Game_Account__c.field-meta.xml
<CustomField>
    <fullName>Game_Account__c</fullName>
    <label>Game Account</label>
    <referenceTo>Game_Account__c</referenceTo>
    <relationshipLabel>Game Orders</relationshipLabel>
    <relationshipName>GameOrders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>