Project 0/CustomPackage/main/default/objects/Game_Orders__c/fields/Game_Payment__c.field-meta.xml
<CustomField>
    <fullName>Game_Payment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Game Payment</label>
    <referenceTo>Game_Payment__c</referenceTo>
    <relationshipLabel>Game Orders</relationshipLabel>
    <relationshipName>Game_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>