Project 0/CustomPackage/main/default/objects/Game_Orders__c/fields/Order_Price__c.field-meta.xml
<CustomField>
    <fullName>Order_Price__c</fullName>
    <formula>(Quantity__c) *  (Game__r.Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>