Project 0/CustomPackage/main/default/objects/Game_Orders__c/fields/Refund_Order__c.field-meta.xml
<CustomField>
    <fullName>Refund_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund-Order</label>
    <referenceTo>Game_Refunds__c</referenceTo>
    <relationshipLabel>Game Orders</relationshipLabel>
    <relationshipName>Game_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>